--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
       </div><!--/container-->  
     </nav><!--/nav--> 
 
+    <!-- Capa -->
     <div class="capa">
       <div class="texto-capa">
         <h1>Música para todos</h1>
@@ -62,6 +63,133 @@
         <a href="" class="btn btn-custom btn-branco btn-lg">Obter Spotify Premium</a>
       </div>
     </div>
+
+    <!-- Conteudos -->
+
+    <section id="servicos">
+      <div class="container">
+        <div class="row">
+
+          <!-- Albuns -->
+          <div class="col-md-6">
+            <div class="row albuns">
+              <div class="col-md-6">
+                <img src="imagens/img1.jpg" class="img-responsive">
+              </div>
+              <div class="col-md-6">
+                <img src="imagens/img2.jpg" class="img-responsive">
+              </div>
+            </div><!--/row-->
+            <div class="row albuns">
+              <div class="col-md-6">
+                <img src="imagens/img3.jpg" class="img-responsive">
+              </div>
+              <div class="col-md-6">
+                <img src="imagens/img4.jpg" class="img-responsive">
+              </div>
+            </div><!--/row-->
+          </div>
+
+          <!-- Serviços -->
+          <div class="col-md-6">
+            <h2>O que o Spotify tem?</h2>
+
+            <h3>Músicas</h3>
+            <p>O spotify tem milhões de músicas. Escute seus sons favoritos, descubra novas músicas e reúna seus favoritos em um só lugar.</p>
+
+            <h3>Playlist</h3>
+            <p>No Spotify você encontra uma playlist para cada momento. Todas feitas por fanáticos e especialistas em músicas.</p>
+
+            <h3>Novos Lançamentos</h3>
+            <p>Escute os novos lançamentos de single e albuns da semana e veja o que está bombando no Top 50.</p>
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+    <section id="recursos">
+      <div class="container">
+        <div class="row">
+          <!-- Recursos -->
+          <div class="col-md-4">
+            <h2>Fácil</h2>
+
+            <h3>Buscar</h3>
+            <p>Já sabe o que quer escutar? É só procurar e apertar o play.</p>
+
+            <h3>Navegar</h3>
+            <p>Veja os novos lançamentos, o que está bombando nas paradas e as melhores playlists para o seu momento.</p>
+
+            <h3>Descobrir</h3>
+            <p>Curta músicas novas toda segunda-feira com uma playlist personalizada pra você. Ou relaxe e curta uma das rádios.</p>
+          </div>
+          <!-- Img Recursos -->
+          <div class="col-md-8">
+
+             <div class="row rotacionar">
+
+              <div class="col-md-6">
+                <img src="imagens/iphone1.png" class="img-responsive">
+              </div>
+
+              <div class="col-md-6">
+                <img src="imagens/iphone2.png" class="img-responsive">
+              </div>
+
+            </div><!--/row-->
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!--Rodapé-->
+    <footer id="rodape">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-2">
+            <span class="img-logo">Spotify</span>
+          </div>
+
+          <div class="col-md-2">
+            <h4>Company</h4>
+            <ul class="nav">
+              <li><a href="#">Sobre</a></li>
+              <li><a href="#">Emprego</a></li>
+              <li><a href="#">Impresa</a></li>
+              <li><a href="#">Novidades</a></li>
+            </ul>
+          </div>
+
+          <div class="col-md-2">
+            <h4>Comunidade</h4>
+            <ul class="nav">
+              <li><a href="#">Artistas</a></li>
+              <li><a href="#">Desenvolvedores</a></li>
+              <li><a href="#">Marcas</a></li>              
+            </ul>
+          </div>
+
+          <div class="col-md-2">
+            <h4>Links Uteis</h4>
+            <ul class="nav">
+              <li><a href="#">Ajuda</a></li>
+              <li><a href="#">Presentes</a></li>
+              <li><a href="#">Player da web</a></li>              
+            </ul>
+          </div>
+
+          <div class="col-md-4">
+             <ul class="nav">
+              <li class="item-rede-social"><a href="#"><img src="imagens/facebook.png"></a></li>
+              <li class="item-rede-social"><a href="#"><img src="imagens/twitter.png"></a></li>
+              <li class="item-rede-social"><a href="#"><img src="imagens/instagram.png"></a></li>              
+            </ul>
+          </div>
+
+        </div><!--/row-->
+      </div>
+    </footer>
     
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
