--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <!-- Conteudos -->
 
-    <section id="servicos">
+    <section id="servicos" class="hidden-xs">
       <div class="container">
         <div class="row">
 
